--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,5 +14,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: login
+      run: docker login --user fvalle1 -p ${{ secrets.GITHUB_TOKEN }} docker.pkg.github.com
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag docker.pkg.github.com/fvalle1/topics/topicmodel:$(date +%s)
