--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,6 +15,6 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: login
-      run: docker login --user fvalle1 -p ${{ secrets.GITHUB_TOKEN }} docker.pkg.github.com
+      run: docker login -u fvalle1 -p ${{ secrets.GITHUB_TOKEN }} docker.pkg.github.com
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag docker.pkg.github.com/fvalle1/topics/topicmodel:$(date +%s)
