--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,7 +14,38 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: login
-      run: docker login -u fvalle1 -p ${{ secrets.GITHUB_TOKEN }} docker.pkg.github.com
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag docker.pkg.github.com/fvalle1/topics/topicmodel:$(date +%s)
+    - name: Build and push Docker images
+      uses: docker/build-push-action@v1.1.0
+      with:
+        # Username used to log in to a Docker registry. If not set then no login will occur
+        username: fvalle1 # optional
+        # Password or personal access token used to log in to a Docker registry. If not set then no login will occur
+        password: ${{secrets.GH_TOKEN}}# optional
+        # Server address of Docker registry. If not set then will default to Docker Hub
+        registry: docker.pkg.github.com # optional
+        # Docker repository to tag the image with
+        repository: docker.pkg.github.com/fvalle1/topics/topicmodel
+        # Comma-delimited list of tags. These will be added to the registry/repository to form the image's tags
+        tags: $(date +%s) # optional
+        # Automatically tags the built image with the git reference as per the readme
+        tag_with_ref: # optional
+        # Automatically tags the built image with the git short SHA as per the readme
+        tag_with_sha: # optional
+        # Path to the build context
+        path: # optional, default is .
+        # Path to the Dockerfile (Default is '{path}/Dockerfile')
+        dockerfile: # optional
+        # Sets the target stage to build
+        target: # optional
+        # Always attempt to pull a newer version of the image
+        always_pull: # optional
+        # Comma-delimited list of build-time variables
+        build_args: # optional
+        # Comma-delimited list of images to consider as cache sources
+        cache_froms: # optional
+        # Comma-delimited list of labels to add to the built image
+        labels: # optional
+        # Adds labels with git repository information to the built image
+        add_git_labels: # optional
+        # Whether to push the image
+        push: # optional, default is true
