--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,9 +35,9 @@ jobs:
     # Runs a set of commands using the runners shell
     - name: Install graph-tool
       run: |
-        echo "deb http://downloads.skewed.de/apt focal main" >> /etc/apt/sources.list
-        echo "deb-src http://downloads.skewed.de/apt/ focal main" >> /etc/apt/sources.list
-        apt-key adv --keyserver keys.openpgp.org --recv-key 612DEFB798507F25 > /dev/null 2>&1
-        apt-get update && apt-get install python3-graph-tool python3-cairo --yes
+        sudo echo "deb http://downloads.skewed.de/apt focal main" >> /etc/apt/sources.list
+        sudo echo "deb-src http://downloads.skewed.de/apt/ focal main" >> /etc/apt/sources.list
+        sudo apt-key adv --keyserver keys.openpgp.org --recv-key 612DEFB798507F25 > /dev/null 2>&1
+        sudo apt-get update && apt-get install python3-graph-tool python3-cairo --yes
     - name: Python Pytest Github Action
       uses: fylein/python-pytest-github-action@v2
