--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,3 +18,5 @@ jobs:
       run: docker login -u fvalle1 -p ${{ secrets.GITHUB_TOKEN }} docker.pkg.github.com
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag docker.pkg.github.com/fvalle1/topics/topicmodel:$(date +%s)
+    - name: Push the Docker image
+      run: docker push docker.pkg.github.com/fvalle1/topics/topicmodel:$(date +%s)
