--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,2 @@
+*.csv filter=lfs diff=lfs merge=lfs -text
 *.h5 filter=lfs diff=lfs merge=lfs -text
-unified/mainTable_test.csv filter=lfs diff=lfs merge=lfs -text
-unified/mainTable_train.csv filter=lfs diff=lfs merge=lfs -text
-unified/mainTable.csv filter=lfs diff=lfs merge=lfs -text
