--- a/requirements.txt
+++ b/requirements.txt
@@ -14,4 +14,5 @@ watermark
 gseapy
 sklearn
 seaborn
---extra-index https://test.pypi.org/simple/ topicpy
+--extra-index-url https://test.pypi.org/simple/ 
+topicpy
